Pic 288 risk register (#201)
* :sparkles: PIC-288: Added risk register feature

* :art: PIC-288: PR changes

* :green_heart: PIC-288: Fixed integration tests

* :bug: PIC-288: Fix display of risk data

* :green_heart: PIC-288: Fixed lint issue

--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -3,7 +3,7 @@
 {%- set riskData = data.riskData -%}
 {%- set activeRisks = [] -%}
 {%- set inactiveRisks = [] -%}
-{%- for risk in riskData.registrations if riskData.registrations | length %}
+{%- for risk in riskData  if riskData %}
     {% if risk.active %}
         {{ activeRisks.push(risk) }}
     {% endif %}
@@ -19,7 +19,6 @@
         <div class="govuk-grid-column-full">
 
             <h2 class="govuk-heading-l govuk-!-margin-bottom-7">Risk register</h2>
-
 
             <div class="govuk-tabs" data-module="govuk-tabs">
                 <ul class="govuk-tabs__list">
