✏️1 possible record banner content change https://dsdmoj.atlassian.net/browse/PIC-808

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -4,9 +4,15 @@
 {%- set courtRoom = data.courtRoom - 0 -%}
 {%- set communityData = data.communityData -%}
 {% set bannerHtml %}
-    <h2 class="govuk-heading-m">{{ data.numberOfPossibleMatches }} possible nDelius records found for {{ data.defendantName }}.
-    <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review records</a>
+    {%  if data.numberOfPossibleMatches === 1 %}
+    <h2 class="govuk-heading-m">{{ data.numberOfPossibleMatches }} possible nDelius record found for {{ data.defendantName }}.
+        <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review record</a>
     </h2>
+    {% else %}
+    <h2 class="govuk-heading-m">{{ data.numberOfPossibleMatches }} possible nDelius records found for {{ data.defendantName }}.
+        <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review records</a>
+    </h2>
+    {% endif %}
 {% endset %}
 
 {% block message %}
