✏️   1 possible record banner content change (#203)
* ✏️1 possible record banner content change
https://dsdmoj.atlassian.net/browse/PIC-808

* 🎨Refactoring

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -4,9 +4,11 @@
 {%- set courtRoom = data.courtRoom - 0 -%}
 {%- set communityData = data.communityData -%}
 {% set bannerHtml %}
-    <h2 class="govuk-heading-m">{{ data.numberOfPossibleMatches }} possible nDelius records found for {{ data.defendantName }}.
-    <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review records</a>
-    </h2>
+{% set recordCount = 'record' if data.numberOfPossibleMatches === 1 else 'records' %}
+        <h2 class="govuk-heading-m">
+            {{ data.numberOfPossibleMatches }} possible nDelius {{ recordCount }} found for {{ data.defendantName }}.
+            <a href="/{{ params.courtCode }}/match/defendant/{{ data.caseNo }}" class="govuk-link govuk-link--no-visited-state">Review {{ recordCount }}</a>
+        </h2>
 {% endset %}
 
 {% block message %}
