PIC-840: Updated fields for breach response

--- a/server/views/case-summary-record-order-breach.njk
+++ b/server/views/case-summary-record-order-breach.njk
@@ -43,11 +43,11 @@
             <dl class="govuk-summary-list govuk-!-margin-top-8">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Order</dt>
-                    <dd class="govuk-summary-list__value">{{ breach.conviction.description }}</dd>
+                    <dd class="govuk-summary-list__value">{{ breach.order }}</dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Sentenced at</dt>
-                    <dd class="govuk-summary-list__value">{{ breach.court }}</dd>
+                    <dd class="govuk-summary-list__value">{{ breach.sentencingCourtName }}</dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Breach incident</dt>
