--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -90,25 +90,25 @@
     {%- set absentComplied = [] -%}
     {%- set attendedFailed = [] -%}
     {%- set absentFailed = [] -%}
-    {% for description, complied in attendedAppointments.complied.flat(Infinity) | groupby(params.getPath("contactType.description")) %}
+    {% for description, complied in attendedAppointments.complied | groupby(params.getPath("contactType.description")) %}
         {{ attendedComplied.push({
             count: complied.length,
             description: description
         }) }}
     {% endfor %}
-    {% for description, complied in absentAppointments.complied.flat(Infinity) | groupby(params.getPath("outcome")) %}
+    {% for description, complied in absentAppointments.complied | groupby(params.getPath("outcome")) %}
         {{ absentComplied.push({
             count: complied.length,
             description: description
         }) }}
     {% endfor %}
-    {% for description, failed in attendedAppointments.failed.flat(Infinity) | groupby(params.getPath("contactType.description")) %}
+    {% for description, failed in attendedAppointments.failed | groupby(params.getPath("contactType.description")) %}
         {{ attendedFailed.push({
             count: failed.length,
             description: description
         }) }}
     {% endfor %}
-    {% for description, failed in absentAppointments.failed.flat(Infinity) | groupby(params.getPath("contactType.description")) %}
+    {% for description, failed in absentAppointments.failed | groupby(params.getPath("contactType.description")) %}
         {{ absentFailed.push({
             count: failed.length,
             description: description
@@ -282,7 +282,7 @@
             </div>
             <div class="govuk-grid-column-two-thirds">
                 <p class="govuk-heading-m govuk-!-margin-bottom-1"><span
-                            class="pac-dashboard-count">{{ attendedAppointments.complied.flat(Infinity) | length }}</span><span
+                            class="pac-dashboard-count">{{ attendedAppointments.complied | length }}</span><span
                             class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
                 </p>
                 {% for complied in attendedComplied | sort(true, false, 'count') %}
@@ -291,7 +291,7 @@
                     </p>
                 {% endfor %}
                 <p class="govuk-heading-m govuk-!-margin-bottom-1"><span
-                            class="pac-dashboard-count">{{ absentAppointments.complied.flat(Infinity) | length }}</span><span
+                            class="pac-dashboard-count">{{ absentAppointments.complied | length }}</span><span
                             class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
                 Absences </span></p>
                 {% for complied in absentComplied | sort(true, false, 'count') %}
@@ -312,7 +312,7 @@
             </div>
             <div class="govuk-grid-column-two-thirds">
                 <p class="govuk-heading-m govuk-!-margin-bottom-1"><span
-                            class="pac-dashboard-count">{{ attendedAppointments.failed.flat(Infinity) | length }}</span><span
+                            class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</span><span
                             class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
                 </p>
                 {% for failed in attendedFailed | sort(true, false, 'count') %}
@@ -320,8 +320,9 @@
                                 class="govuk-body pac-dashboard-count">{{ failed.count }}</span>{{ failed.description }}
                     </p>
                 {% endfor %}
+                <p>{{ absentAppointments.failed | dump }}</p>
                 <p class="govuk-heading-m govuk-!-margin-bottom-1"><span
-                            class="pac-dashboard-count">{{ absentAppointments.failed.flat(Infinity) | length }}</span><span
+                            class="pac-dashboard-count">{{ absentAppointments.failed | length }}</span><span
                             class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
                 Absences </span></p>
                 {% for failed in absentFailed | sort(true, false, 'count') %}
