--- a/server/views/match-records.njk
+++ b/server/views/match-records.njk
@@ -10,11 +10,11 @@
 } %}
 
 {% for item in data %}
-    {% if item.numberOfPossibleMatches and not item.crn %}
+    {% if item.probationStatus | string | lower == "possible ndelius record" %}
         {%- set tableRow = [
             { text: item.defendantName | escape },
             { text: item.numberOfPossibleMatches | escape },
-            { text: ('<a href="/' + params.courtCode +'/match/defendant/' + (item.caseNo | escape) + '" class="pac-defendant-link govuk-link govuk-link--no-visited-state">Review records</a>') | safe }
+            { text: ('<a href="/' + params.courtCode + '/match/defendant/' + (item.caseNo | escape) + '" class="pac-defendant-link govuk-link govuk-link--no-visited-state">Review records</a>') | safe }
         ] -%}
         {{ tableData.rows.push(tableRow) }}
     {% endif %}
