✏️Amend matcher call to action banner for single cases https://dsdmoj.atlassian.net/browse/PIC-864

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -157,10 +157,14 @@
 
     {% if params.unmatchedRecords > 0 %}
         {%- from "components/inset-text/macro.njk" import insetText -%}
+        {% set defendantCount = 'defendant' if params.unmatchedRecords <= 1 else 'defendants' %}
+        {% set recordCount = 'record' if params.unmatchedRecords <= 1 else 'records' %}
+        {% set matchCount = 'matches' if params.unmatchedRecords <= 1 else 'match' %}
+        {% set needCount = 'needs' if params.unmatchedRecords <= 1 else 'need' %}
         {{ insetText({
-            linkText: "Review defendants with possible nDelius records",
+            linkText: "Review " + defendantCount + " with possible nDelius " + recordCount,
             link: '/' + params.courtCode + "/match/bulk/" + params.date,
-            text: params.unmatchedRecords + (' defendants' if params.unmatchedRecords > 1 else ' defendant') + " partially matches existing records and needs review."
+            text: params.unmatchedRecords + " " + defendantCount + " partially " + matchCount + " existing records and " + needCount + " review."
         }) }}
     {% endif %}
 
