--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -51,8 +51,8 @@
                                 <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell govuk-!-font-weight-bold">{{ risk.type }}</td>
-                                    <td class="govuk-table__cell">{{ risk.startDate }}</td>
-                                    <td class="govuk-table__cell">{{ risk.nextReviewDate }}</td>
+                                    <td class="govuk-table__cell">{{ moment(risk.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                                    <td class="govuk-table__cell">{{ moment(risk.nextReviewDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                                     <td class="govuk-table__cell">{{ (risk.notes if risk.notes | length) or '-' }}</td>
                                 </tr>
                                 </tbody>
@@ -78,8 +78,8 @@
                                 <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell govuk-!-font-weight-bold">{{ risk.type }}</td>
-                                    <td class="govuk-table__cell">{{ risk.startDate }}</td>
-                                    <td class="govuk-table__cell">{{ risk.endDate }}</td>
+                                    <td class="govuk-table__cell">{{ moment(risk.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                                    <td class="govuk-table__cell">{{ moment(risk.endDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                                     <td class="govuk-table__cell">{{ (risk.notes if risk.notes | length) or '-' }}</td>
                                 </tr>
                                 </tbody>
