💄💄Set size of Note column to 50%

--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -44,7 +44,7 @@
                                 <th scope="col" class="govuk-table__header">Type</th>
                                 <th scope="col" class="govuk-table__header">Registered</th>
                                 <th scope="col" class="govuk-table__header">Next review</th>
-                                <th scope="col" class="govuk-table__header">Notes</th>
+                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Notes</th>
                             </tr>
                             </thead>
                             {%- for risk in activeRisks %}
@@ -71,7 +71,7 @@
                                 <th scope="col" class="govuk-table__header">Type</th>
                                 <th scope="col" class="govuk-table__header">Registered</th>
                                 <th scope="col" class="govuk-table__header">End date</th>
-                                <th scope="col" class="govuk-table__header">Notes</th>
+                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Notes</th>
                             </tr>
                             </thead>
                             {%- for risk in inactiveRisks %}
