--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -229,8 +229,8 @@
                     <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header">Breach</th>
-                        <th scope="col" class="govuk-table__header">Started</th>
                         <th scope="col" class="govuk-table__header">Status</th>
+                        <th scope="col" class="govuk-table__header">Status date</th>
                     </tr>
                     </thead>
                     <tbody class="govuk-table__body qa-breaches">
@@ -240,8 +240,8 @@
                                         href="{{ currentOrder.convictionId }}/breach/{{ breach.breachId }}"
                                         class="qa-breach-link-{{ loop.index }} govuk-link govuk-link--no-visited-state">{{ breach.description }}</a>
                             </td>
-                            <td class="govuk-table__cell">{{ moment(breach.started, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                             <td class="govuk-table__cell">{{ breach.status }}</td>
+                            <td class="govuk-table__cell">{{ moment(breach.statusDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
