:sparkles: Viewing case list on Sunday redirects to Monday
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -91,8 +91,10 @@
     } %}
 {% endif %}
 
+{% set isSunday = moment().day() === 0 %}
 {% set dateFormat = 'dddd D MMMM' %}
 {% set timeStampDateFormat = 'ddd D MMM' %}
+{% set useTodayDate = moment() if not isSunday else moment().add(1, 'days') %}
 {% set currentDate = moment(params.date, 'YYYY-MM-DD') %}
 {% set today = moment().format('YYYY-MM-DD') %}
 {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
@@ -129,7 +131,7 @@
         <span class="govuk-caption-xl">Cases</span>
         {% if params.date === today %}
             Today
-        {% elseif params.date === tomorrow %}
+        {% elseif params.date === tomorrow and not isSunday %}
             Tomorrow
         {% else %}
             {{ currentDate.format(dateFormat) }}
@@ -137,7 +139,7 @@
     </h1>
 
     <p class="govuk-!-margin-bottom-7">
-        {% if currentDate.isAfter(moment()) %}
+        {% if currentDate.isAfter(useTodayDate) %}
             <a class="pac-pagination-link govuk-!-margin-right-5" href="/{{ params.courtCode }}/cases/{{ params.addBusinessDays(currentDate, -1).format('YYYY-MM-DD') }}">
                 <svg class="pac-pagination-link--icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path fill="currentColor" d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
