:lipstick: PIC-917: Added whitespace formatting:

--- a/server/views/case-summary-record-order-breach.njk
+++ b/server/views/case-summary-record-order-breach.njk
@@ -77,7 +77,7 @@
 
             <h3 class="govuk-heading-m govuk-!-margin-top-8">Notes</h3>
             {% if breach.notes | length %}
-                <p class="govuk-body">{{ breach.notes }}</p>
+                <p class="govuk-body pac-white-space-format">{{ breach.notes }}</p>
             {% else %}
                 <p class="govuk-body">No notes have been added.</p>
             {% endif %}
