:art: PIC-938: Updated OU code to 5 digits

--- a/server/views/select-court.njk
+++ b/server/views/select-court.njk
@@ -8,8 +8,8 @@
 
     <h1 class="govuk-heading-l">Select a court</h1>
 
-        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B10JQ00" class="govuk-link govuk-link--no-visited-state">North Tyneside Magistrates' Court</a></p>
-        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B14LO00" class="govuk-link govuk-link--no-visited-state">Sheffield Magistrates' Court</a></p>
+        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B10JQ" class="govuk-link govuk-link--no-visited-state">North Tyneside Magistrates' Court</a></p>
+        <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-2"><a href="/select-court/B14LO" class="govuk-link govuk-link--no-visited-state">Sheffield Magistrates' Court</a></p>
 
     </form>
 
